--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-redux": "^9.1.2",
+    "react-syntax-highlighter": "^15.6.1",
     "sonner": "^1.7.0"
   },
   "devDependencies": {
